--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "csv-parser": "^3.2.0",
+    "exceljs": "^4.4.0",
+    "multer": "^2.0.2",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -22,6 +28,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "daisyui": "^5.0.54",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
