--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "blgfxiii_directory": "file:..",
     "csv-parser": "^3.2.0",
     "exceljs": "^4.4.0",
     "multer": "^2.0.2",
