--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.9",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "blgfxiii_directory": "file:..",
