--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,8 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "path-to-regexp": "^8.3.0",
-    "multer": "^1.4.5"
+    "multer": "^1.4.4",
+    "path-to-regexp": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
