--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "blgfxiii_directory": "file:..",
     "csv-parser": "^3.2.0",
     "exceljs": "^4.4.0",
+    "lucide-react": "^latest",
     "multer": "^2.0.2",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
