--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^1.4.4",
+    "node-fetch": "^3.3.2",
     "path-to-regexp": "^8.3.0"
   },
   "devDependencies": {
