--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,11 @@
 {
-    "version": 2,
     "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
-        {
-            "source": "/uploads/(.*)",
-            "destination": "/backend/uploads/$1"
-        },
         {
             "source": "/(.*)",
             "destination": "/index.html"
         }
     ],
-    "buildCommand": "npm run build",
+    "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": "vite"
 }
