--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "destination": "/index.html"
         }
     ],
-    "buildCommand": "cd frontend && npm install && npm run build",
+    "buildCommand": "cd frontend && npm install --include=dev && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": "vite"
 }
