--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
-    "install-backend": "cd backend && npm install --omit=dev",
+    "install-backend": "cd backend && rm -rf node_modules && npm install --omit=dev",
     "postinstall": "npm run install-backend"
   },
   "dependencies": {
