--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
-        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
     ],
-    "buildCommand": "cd frontend && npm install && npm run build",
+    "buildCommand": "cd frontend && npm install --include=dev && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": "vite"
 }
