--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.9",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "blgfxiii_directory": "file:..",
     "csv-parser": "^3.2.0",
+    "daisyui": "^5.0.54",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.544.0",
     "multer": "^2.0.2",
@@ -27,18 +29,16 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12",
+    "vite": "^7.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.4",
-    "daisyui": "^5.0.54",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "globals": "^16.3.0"
   }
 }
