--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "name": "root-package",
     "private": true,
     "scripts": {
-        "build": "cd frontend && npm install && npm run build"
+        "build": "cd frontend && npm install --include=dev && npm run build"
     }
 }
