--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "root-package",
     "private": true,
     "scripts": {
-        "build": "cd frontend && npm install --include=dev && npm run build"
+        "build": "cd frontend && npm install --include=dev && npm run build",
+        "start": "cd frontend && npx serve dist -s -l 5001"
     }
 }
