--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Production API URL (Update this if backend is deployed separately)
 # If serving static files from backend, leave as /api
-VITE_API_URL=/api
+VITE_API_URL=https://blgfxiii-directory.onrender.com/api
