--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "exceljs": "^4.4.0",
         "lucide-react": "^0.544.0",
         "multer": "^2.0.2",
+        "papaparse": "^5.5.3",
         "postcss": "^8.5.6",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
