--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "scripts": {
         "build": "npm install --prefix backend && npm install --include=dev --prefix frontend && npm run build --prefix frontend",
         "start": "npm start --prefix backend"
+    },
+    "dependencies": {
+        "xlsx": "^0.18.5"
     }
 }
